kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: backend-deployment
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      run: backend-deployment
  template:
    metadata:
      labels:
        run: backend-deployment
    spec:
      containers:
      - image: registry.gitlab.com/flashbacker/backend:master-12a0b119
        name: backend-deployment
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            port: 8081
            path: /
      imagePullSecrets:
      - name: regcred
