kubernetes/dynamodb-local-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: dynamodb-local-deployment
  name: dynamodb-local-deployment
  namespace: flashbacker-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      run: dynamodb-local-deployment
  template:
    metadata:
      labels:
        run: dynamodb-local-deployment
    spec:
      containers:
      - image: amazon/dynamodb-local
        name: dynamodb-local-deployment
        ports:
        - containerPort: 8000
        readinessProbe:
          tcpSocket:
            port: 8000
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
