kubernetes/dynamodb-local-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamodb-local-service
  namespace: flashbacker-qa
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: dynamodb-local-deployment
  type: ClusterIP
