kubernetes/flashbacker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flashbacker-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: flashbacker-static-ip
    networking.gke.io/managed-certificates: "backend-managed-certificate,frontend-managed-certificate"
spec:
  rules:
    - host: api.flashbacker-qa.vasas.dev
      http:
        paths:
          - backend:
              serviceName: backend-service
              servicePort: 8081
    - host: flashbacker-qa.vasas.dev
      http:
        paths:
          - backend:
              serviceName: frontend-service
              servicePort: 80
